[package]
name = "xrusty"
description = "Parse documents and transform using χrust"
keywords = ["xml", "xpath", "xslt", "markdown"]
authors = ["Steve Ball <Steve.Ball@explain.com.au>"]
version = "0.1.0"
license = "Apache-2.0"
repository = "https://gitlab.gnome.org/balls/xrusty.git"
documentation = "https://docs.rs/xrusty/"
readme = "README.md"
edition = "2024"

[dependencies]
xrust = "1.2.5"
xrust-md = "0.1.1"
xrust-net = "0.1.0"
url = "2.4.1"
clap = { version = "4.5.46", features = ["derive"] }
